--- a/src/www/index.html
+++ b/src/www/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"/>
         <meta http-equiv="X-UA-Compatible" content="ie-edge"/>
         <title></title>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <div id="root"></div>
